Sat May  3 18:10:54 2008  Tanaka Akira  <akr@fsij.org>

	* time.c (time_timespec): raise TypeError for nil and other objects
	  which has no divmod method.

Fri May  2 23:59:26 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (internal_read_func, internal_write_func): split from
	  internal_io_func.

Fri May  2 23:55:15 2008  Tanaka Akira  <akr@fsij.org>

	* variable.c (rb_define_hooked_variable): guard *var from GC to
	  prevent collecting argf under RUBY_DEBUG=gc_stress.

Fri May  2 17:29:59 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* range.c (range_step): call to_int if step is not a numeric
	  value.  [ruby-dev:34575]

Fri May  2 16:10:57 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* range.c (range_step): do not forcefully convert steps into
	  integers.  [ruby-dev:34571]

Fri May  2 14:52:33 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* misc/ruby-mode.el: move fontifying code from hook.  a patch from
	  Phil Hagelberg <phil at hagelb.org> in [ruby-core:16636].

Fri May  2 14:10:17 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* range.c (range_step): step may be bignum.

Fri May  2 13:52:36 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* re.c (Init_Regexp): remove MatchData#select.  [ruby-dev:34563]

Thu May  1 23:59:59 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (rb_big_divide), numeric.c (fix_divide): check for result
	  domain.  [ruby-dev:34559]

Thu May  1 23:57:06 2008  James Edward Gray II  <jeg2@ruby-lang.org>

	* lib/net/telnet.rb:  This patch from Brian Candler adds a FailEOF mode which
	  can be activated to have net/telnet raise EOFError exceptions when the 
	  remote connection is closed.  The default behavior remains unchanged though.

Thu May  1 23:43:21 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* range.c (range_step): check if step can be converted to an integer.
	  [ruby-dev:34558]

	* range.c (range_step): allow float step bigger than zero but less
	  than one.  [ruby-dev:34557]
