@@ -1,6 +1,7 @@
 require 'test/unit'
 require 'continuation'
 require 'fiber'
+require_relative 'envutil'
 
 class TestContinuation < Test::Unit::TestCase
   def test_create
@@ -49,6 +50,20 @@ class TestContinuation < Test::Unit::TestCase
       end.resume
       c.call
     }
+  end
+
+  def test_sort
+    assert_normal_exit(<<-'End')
+      require 'continuation'
+      n = 1000
+      ary = (1..100).to_a
+      ary.sort! {|a,b|
+        callcc {|k| $k = k } if !defined? $k
+        a <=> b
+      }
+      n -= 1
+      $k.call if 0 < n
+    End
   end
 end
 
