@@ -1,3 +1,8 @@
+Sat May  3 20:57:06 2008  Tanaka Akira  <akr@fsij.org>
+
+	* test/ruby/envutil.rb (Test::Unit::Assertions#assert_normal_exit):
+	  new method.
+
 Sat May  3 18:10:54 2008  Tanaka Akira  <akr@fsij.org>
 
 	* time.c (time_timespec): raise TypeError for nil and other objects
